# rust-grpc-web-http

./: Cargo.toml  Makefile  README.md  build.rs
proto/: common.proto  prefecture.proto  user.proto
src/: errors.rs  external.rs  main.rs  rpc.rs
src/rpc/: prefecture.rs  user.rs
