[package]
name = "rust-grpc-sample"
version = "0.1.0"
edition = "2018"

[dependencies]
bytes = "1.0.1"
prost = "0.8.0"
prost-derive = "0.8.0"
tokio = { version = "1.8.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.5.0"
tonic-web = "0.1"
tonic-reflection = "0.2.0"
reqwest = { version = "0.11.6", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0.24"
uuid = { version = "0.8", features = ["serde", "v4"] }

[build-dependencies]
tonic-build  = "0.5.0"
